--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -7,54 +7,56 @@
     <title>Home | Organic</title>
     <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/owl.carousel.min.css">
+    <link rel="stylesheet" href="css/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
     <header>
         <div class="info-bar">
-           <div class="row">
-               <div class="col-lg-6">
-                   <a href="" class="social"><i class="fab fa-facebook-f"></i></a>
-                   <a href="" class="social"><i class="fab fa-twitter"></i></a>
-                   <a href="" class="social"><i class="fab fa-google-plus-g"></i></a>
-                   <a href="" class="social"><i class="fab fa-pinterest-p"></i></a>
-                   <a href="" class="social"><i class="fab fa-youtube"></i></a>
-                   <p class="info-head" style="display: inline">Phone: <span>(+91) 123456789</span></p>
-                   <p class="info-head" style="display: inline">Email: <span>inquiry@nognic.com</span></p>
-               </div>
-               <div class="col-lg-6">
-                   <div class="dropdown show">
-                       <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
-                           <i class="far fa-user"></i> My Account
-                       </a>
-                       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                           <a class="dropdown-item" href="#">Frofile</a>
-                           <a class="dropdown-item" href="#">Setting</a>
-                           <a class="dropdown-item" href="#">Sign out</a>
-                       </div>
-                   </div>
-                   <div class="dropdown show">
-                       <a class="dropdown-toggle unit" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
-                           $ USD
-                       </a>
-                       <div class="dropdown-menu unit-menu" aria-labelledby="dropdownMenuLink">
-                           <a class="dropdown-item unit-item" href="#">$ USD</a>
-                           <a class="dropdown-item unit-item" href="#">đ VND</a>
-                       </div>
-                   </div>
-                   <div class="dropdown show">
-                       <a class="dropdown-toggle language" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
-                           <img src="img/fr.png" alt=""> FRENCH
-                       </a>
-                       <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                           <a class="dropdown-item language-item" href="#"><img src="img/fr.png" alt=""> FRENCH</a>
-                           <a class="dropdown-item language-item" href="#"><img src="img/vn.png" alt=""> VIETNAMESE</a>
-                           <a class="dropdown-item language-item" href="#"><img src="img/uk.png" alt=""> ENGLISH</a>
-                       </div>
-                   </div>
-               </div>
-           </div>
+            <div class="row">
+                <div class="col-lg-6">
+                    <a href="" class="social"><i class="fab fa-facebook-f"></i></a>
+                    <a href="" class="social"><i class="fab fa-twitter"></i></a>
+                    <a href="" class="social"><i class="fab fa-google-plus-g"></i></a>
+                    <a href="" class="social"><i class="fab fa-pinterest-p"></i></a>
+                    <a href="" class="social"><i class="fab fa-youtube"></i></a>
+                    <p class="info-head" style="display: inline">Phone: <span>(+91) 123456789</span></p>
+                    <p class="info-head" style="display: inline">Email: <span>inquiry@nognic.com</span></p>
+                </div>
+                <div class="col-lg-6">
+                    <div class="dropdown show">
+                        <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
+                            <i class="far fa-user"></i> My Account
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item" href="#">Frofile</a>
+                            <a class="dropdown-item" href="#">Setting</a>
+                            <a class="dropdown-item" href="#">Sign out</a>
+                        </div>
+                    </div>
+                    <div class="dropdown show">
+                        <a class="dropdown-toggle unit" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
+                            $ USD
+                        </a>
+                        <div class="dropdown-menu unit-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item unit-item" href="#">$ USD</a>
+                            <a class="dropdown-item unit-item" href="#">đ VND</a>
+                        </div>
+                    </div>
+                    <div class="dropdown show">
+                        <a class="dropdown-toggle language" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
+                            <img src="img/fr.png" alt=""> FRENCH
+                        </a>
+                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                            <a class="dropdown-item language-item" href="#"><img src="img/fr.png" alt=""> FRENCH</a>
+                            <a class="dropdown-item language-item" href="#"><img src="img/vn.png" alt=""> VIETNAMESE</a>
+                            <a class="dropdown-item language-item" href="#"><img src="img/uk.png" alt=""> ENGLISH</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <div class="container">
             <div class="row">
@@ -90,7 +92,10 @@
         </nav>
     </header>
     <main>
-        <div class="container">
+        <div class="owl-carousel">
+            <div><img src="img/slider1.jpg" alt=""></div>
+            <div><img src="img/slide2.jpg" alt=""></div>
+            <div><img src="img/slider3.jpg" alt=""></div>
         </div>
     </main>
     <footer>
@@ -245,9 +250,31 @@
         </div>
     </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
+    <script src="js/owl.carousel.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/style.js"></script>
+    <script>
+    $(document).ready(function() {
+        $(".owl-carousel").owlCarousel();
+    });
+    $('.owl-carousel').owlCarousel({
+        loop: true,
+        nav:true,
+        navText: ["<img src='img/background-slide.png'>","<img src='img/background-slide.png'>"],
+        responsive: {
+            0: {
+                items: 1
+            },
+            600: {
+                items: 1
+            },
+            1000: {
+                items: 1
+            }
+        }
+    })
+    </script>
 </body>
 
 </html>
