--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -30,8 +30,95 @@
                   </ul>
             </div>
         </nav>
-        <div class="row no-margin">
-            hello
+        <div class="my-account-main-achoo">
+            <div class="row no-margin">
+              <div class="col-lg-6">
+                <div class="my-account-title-achoo">
+                  Login
+                </div> 
+                <div class="line-img-achoo"></div>
+                <!--FORM NHAP LIEU-->
+                <div class="row">
+                  <div class="col-lg-12">
+                    <!--THEM KHOANG TRANG-->
+                    <div class="my-account-form-space-achoo">
+                    </div>
+                    <!--KET THUC-->
+                      <input type="text" class="form-control bg-light my-account-form-font-achoo" id="username" placeholder="User name">
+                  </div>
+                  <div class="col-lg-12">
+                    <input type="password" class="form-control bg-light my-account-form-font-achoo" id="password" placeholder="Password">
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="form-check my-account-form-check-achoo">
+                      <input type="checkbox" class="form-check-input" id="remember-me" checked>
+                      <label class="form-check-label" for="remember-me">Remember me</label>
+                    </div>
+                  </div>
+                  <div class="col-lg-6">
+                    <div class="form-check my-account-form-check-achoo">
+                      <input type="checkbox" class="form-check-input" id="forgot-password">
+                      <label class="form-check-label" for="forgot-password">Forgot your Password</label>
+                    </div>
+                  </div>
+                  <div class="col-lg-12">
+                    <!--THEM KHOANG TRANG-->
+                    <div class="my-account-form-space-achoo">
+                    </div>
+                    <!--KET THUC-->
+                      <button type="submit" class="btn btn-primary my-account-button-submit-achoo">LOGIN</button>
+                  </div>
+                </div>
+                <!--KET THUC FORM NHAP LIEU-->
+              </div>
+              <div class="col-lg-6">
+                <div class="my-account-title-achoo">
+                  Register
+                </div> 
+                <div class="line-img-achoo"></div>
+                                <!--FORM NHAP LIEU-->
+                                <div class="row">
+                                  <div class="col-lg-12">
+                                    <!--THEM KHOANG TRANG-->
+                                    <div class="my-account-form-space-achoo">
+                                    </div>
+                                    <!--KET THUC-->
+                                    <span class="my-account-required-red-achoo">
+                                      <input type="text" class="form-control bg-light my-account-form-font-achoo" id="yourname" placeholder="Your name">
+                                    </span>
+                                  </div>
+                                  <div class="col-lg-12">
+                                    <span class="my-account-required-red-achoo">
+                                    <input type="email" class="form-control bg-light my-account-form-font-achoo" id="youremail" placeholder="Your email">
+                                    </span>
+                                  </div>
+                                  <div class="col-lg-12">
+                                    <span class="my-account-required-red-achoo">
+                                    <input type="password" class="form-control bg-light my-account-form-font-achoo" id="password" placeholder="Password">
+                                  </span>
+                                  </div>
+                                  <div class="col-lg-12">
+                                    <span class="my-account-required-red-achoo">
+                                    <input type="password" class="form-control bg-light my-account-form-font-achoo" id="re-pasword" placeholder="Repeat Password">
+                                  </span>
+                                  </div>
+                                  <div class="col-lg-12">
+                                    <div class="form-check my-account-form-check-achoo">
+                                      <input type="radio" class="form-check-input" id="readme">
+                                      <label class="form-check-label" for="readme">Privacy Policy Agreement?</label>
+                                    </div>
+                                  </div>
+                                  <div class="col-lg-12">
+                                    <!--THEM KHOANG TRANG-->
+                                    <div class="my-account-form-space-achoo">
+                                    </div>
+                                    <!--KET THUC-->
+                                      <button type="submit" class="btn btn-primary my-account-button-submit-achoo">REGISTER</button>
+                                  </div>
+                                </div>
+                                <!--KET THUC FORM NHAP LIEU-->
+              </div>
+            </div>
         </div>
     </div>
 </body>
