xong my-account

--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -83,24 +83,16 @@
                                     <div class="my-account-form-space-achoo">
                                     </div>
                                     <!--KET THUC-->
-                                    <span class="my-account-required-red-achoo">
-                                      <input type="text" class="form-control bg-light my-account-form-font-achoo" id="yourname" placeholder="Your name">
-                                    </span>
+                                    <input type="text" class="form-control bg-light my-account-form-font-achoo asterisk" id="yourname" placeholder="Your name" required>
                                   </div>
                                   <div class="col-lg-12">
-                                    <span class="my-account-required-red-achoo">
-                                    <input type="email" class="form-control bg-light my-account-form-font-achoo" id="youremail" placeholder="Your email">
-                                    </span>
+                                    <input type="email" class="form-control bg-light my-account-form-font-achoo asterisk" id="youremail" placeholder="Your email" required>
                                   </div>
                                   <div class="col-lg-12">
-                                    <span class="my-account-required-red-achoo">
-                                    <input type="password" class="form-control bg-light my-account-form-font-achoo" id="password" placeholder="Password">
-                                  </span>
+                                    <input type="password" class="form-control bg-light my-account-form-font-achoo asterisk" id="register-password" placeholder="Password" required>
                                   </div>
                                   <div class="col-lg-12">
-                                    <span class="my-account-required-red-achoo">
-                                    <input type="password" class="form-control bg-light my-account-form-font-achoo" id="re-pasword" placeholder="Repeat Password">
-                                  </span>
+                                    <input type="password" class="form-control bg-light my-account-form-font-achoo asterisk" id="re-pasword" placeholder="Repeat Password" required>
                                   </div>
                                   <div class="col-lg-12">
                                     <div class="form-check my-account-form-check-achoo">
