--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -7,8 +7,8 @@
     <title>Home | Organic</title>
     <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
+    <link rel="stylesheet" href="slick/slick.css">
+    <link rel="stylesheet" href="slick/slick-theme.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -25,12 +25,12 @@
                     <p class="info-head" style="display: inline">Phone: <span>(+91) 123456789</span></p>
                     <p class="info-head" style="display: inline">Email: <span>inquiry@nognic.com</span></p>
                 </div>
-                <div class="col-lg-6">
+                <div class="col-lg-6 combobox">
                     <div class="dropdown show">
                         <a class="dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true">
                             <i class="far fa-user"></i> My Account
                         </a>
-                        <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                        <div class="dropdown-menu account" aria-labelledby="dropdownMenuLink">
                             <a class="dropdown-item" href="#">Frofile</a>
                             <a class="dropdown-item" href="#">Setting</a>
                             <a class="dropdown-item" href="#">Sign out</a>
@@ -92,10 +92,63 @@
         </nav>
     </header>
     <main>
-        <div class="owl-carousel">
-            <div><img src="img/slider1.jpg" alt=""></div>
-            <div><img src="img/slide2.jpg" alt=""></div>
-            <div><img src="img/slider3.jpg" alt=""></div>
+        <div class="slider">
+            <div class="slide">
+                <img src="img/slider1.jpg" alt="">
+                <div class="slide-text">
+                    <p style="color:#94ad65; font-family: Montserrat; font-size: 31.74px">Naturral Health Care Ingredientsa</p>
+                    <p style="color:#fff; font-family: Montserrat; font-size: 126.27px">100%
+                        <span style="color: #94ad65">ORGANIC</span></p>
+                    <p style="color:#d7e7c5; font-family: Montserrat; font-size: 24px">Are they safer? More nutritious? </p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="img/slide2.jpg" alt="">
+                <div class="slide-text">
+                    <p style="color:#94ad65; font-family: Montserrat; font-size: 31.74px">Naturral Health Care Ingredientsa</p>
+                    <p style="color:#fff; font-family: Montserrat; font-size: 126.27px">100%
+                        <span style="color: #94ad65">ORGANIC</span></p>
+                    <p style="color:#d7e7c5; font-family: Montserrat; font-size: 24px">Are they safer? More nutritious? </p>
+                </div>
+            </div>
+            <div class="slide">
+                <img src="img/slider3.jpg" alt="">
+                <div class="slide-text">
+                    <p style="color:#94ad65; font-family: Montserrat; font-size: 31.74px">Naturral Health Care Ingredientsa</p>
+                    <p style="color:#fff; font-family: Montserrat; font-size: 126.27px">100%
+                        <span style="color: #94ad65">ORGANIC</span></p>
+                    <p style="color:#d7e7c5; font-family: Montserrat; font-size: 24px">Are they safer? More nutritious? </p>
+                </div>
+            </div>
+        </div>
+        <div class="collection">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-4">
+                        <div class="collection-item">
+                            <img src="img/collection.png" alt="">
+                            <p>FRESH <span>FRUITS</span></p>
+                            <a href="">VIEW COLLECTIONS</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="collection-item">
+                            <img src="img/collection.png" alt="">
+                            <p>FRESH <span>FRUITS</span></p>
+                            <a href="">VIEW COLLECTIONS</a>
+                        </div>
+                    </div>
+                    <div class="col-sm-4">
+                        <div class="collection-item">
+                            <img src="img/collection.png" alt="">
+                            <p>FRESH <span>FRUITS</span></p>
+                            <a href="">VIEW COLLECTIONS</a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="new-arrival">
         </div>
     </main>
     <footer>
@@ -250,30 +303,19 @@
         </div>
     </footer>
     <script src="js/jquery-3.5.1.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
+    <script type="text/javascript" src="slick/slick.min.js"></script>
     <script src="js/popper.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <script src="js/style.js"></script>
     <script>
     $(document).ready(function() {
-        $(".owl-carousel").owlCarousel();
+        $('.slider').slick({
+            arrows: true,
+            infinite: true,
+            slidesToShow: 1,
+            slidesToScroll: 1
+        });
     });
-    $('.owl-carousel').owlCarousel({
-        loop: true,
-        nav:true,
-        navText: ["<img src='img/background-slide.png'>","<img src='img/background-slide.png'>"],
-        responsive: {
-            0: {
-                items: 1
-            },
-            600: {
-                items: 1
-            },
-            1000: {
-                items: 1
-            }
-        }
-    })
     </script>
 </body>
 
