--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>My Account</title>
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <script src="js/jquery-3.5.1.min.js"></script>
   
@@ -95,6 +95,7 @@
     </nav>
 </header>
   <!--KET THUC HEADER-->
+  <!--MAIN-->
   <main>
     <div class="header-content-achoo">
     </div>
@@ -202,6 +203,7 @@
     <div class="footer-content-achoo">
     </div>
   </main>
+  <!--KET THUC MAIN-->
   <!--FOOTER-->
   <footer>
     <div class="container footer-title">
