hoàn thiện checkout

--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -104,15 +104,18 @@
             <div class="navbar-content-achoo">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                      <a class="nav-link navbar-font-achoo" href="home.html">Home |</a>
+                      <a class="nav-link navbar-font-achoo" href="home.html">Home</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link navbar-font-active-achoo" href="#">My Account</a>
+                      <span class="nav-link navbar-font-achoo">|</span>
+                    </li>
+                    <li class="nav-item">
+                      <a class="nav-link text-light navbar-font-active-achoo" href="#">Checkout</a>
                     </li>
                   </ul>
                   <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link navbar-font-title-achoo" href="#">My Account</a>
+                        <a class="nav-link text-light navbar-font-title-achoo" href="#">Checkout</a>
                     </li>
                   </ul>
             </div>
