--- a/BaiTapLon-HCJ/Add-to-cart.html
+++ b/BaiTapLon-HCJ/Add-to-cart.html
@@ -23,23 +23,26 @@
     <div class="header-content-achoo">
     </div>
     <div class="container">
-        <nav class="navbar navbar-expand-sm no-padding">
-            <div class="navbar-content-achoo">
-                <ul class="navbar-nav">
-                    <li class="nav-item">
-                      <a class="nav-link navbar-font-achoo" href="home.html">Home |</a>
-                    </li>
-                    <li class="nav-item">
-                      <a class="nav-link navbar-font-active-achoo" href="#">Shopping Cart</a>
-                    </li>
-                  </ul>
-                  <ul class="navbar-nav">
-                    <li class="nav-item">
-                        <a class="nav-link navbar-font-title-achoo" href="#">Shopping Cart</a>
-                    </li>
-                  </ul>
-            </div>
-        </nav>
+      <nav class="navbar navbar-expand-sm no-padding">
+        <div class="navbar-content-achoo">
+            <ul class="navbar-nav">
+                <li class="nav-item">
+                  <a class="nav-link navbar-font-achoo" href="home.html">Home</a>
+                </li>
+                <li class="nav-item">
+                  <span class="nav-link navbar-font-achoo">|</span>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-light navbar-font-active-achoo" href="#">Checkout</a>
+                </li>
+              </ul>
+              <ul class="navbar-nav">
+                <li class="nav-item">
+                    <a class="nav-link text-light navbar-font-title-achoo" href="#">Checkout</a>
+                </li>
+              </ul>
+        </div>
+    </nav>
         <!--NOI DUNG CHINH-->
         <!--THEM KHOANG TRANG-->
         <div class="my-account-form-space-achoo">
