--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -162,55 +162,159 @@
                             <div class="sale">
                                 <img src="img/Sale.png" alt="">
                             </div>
-                            <img src="img/arrival-item.png" class="arr-img" alt="">
-                            <p class="arritem-title">Jessica Simpson Fruit's</p>
-                            <p class="arritem-price">$19.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" class="arr-img" alt="">
+                                <p class="arritem-title">Jessica Simpson Fruit's</p>
+                                <p class="arritem-price">$19.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                           <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
                             <div class="new">
                                 <img src="img/new.png" alt="">
                             </div>
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                         <div class="slide-item">
-                            <img src="img/arrival-item.png" alt="">
-                            <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
-                            <p class="arritem-price">$32.00<del>$12.00</del></p>
-                            <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            <div class="slide-item-sm">
+                                <img src="img/arrival-item.png" alt="">
+                                <p class="arritem-title">Lee Uniforms Vegetable's Short-Sleeve</p>
+                                <p class="arritem-price">$32.00<del>$12.00</del></p>
+                                <button><img src="img/gio-hang.png" alt="">BUY NOW</button>
+                            </div>
+                            <div class="middle">
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/heart.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                </div>
+                                <div class="wrapper-icon">
+                                    <a href=""><img src="img/giohang2.png" alt=""></a>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -464,6 +568,20 @@
                    <button class="btn-newsl">Subcribe</button>
                </div>
             </div>
+            <div class="brand">
+                <div class="container">
+                    <div class="slide-brand">
+                        <div class="slide-brand-item"><img src="img/themeforest.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/envato.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/codecanyon.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/audiojungle.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/3docean.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/themeforest.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/envato.png" alt=""></div>
+                        <div class="slide-brand-item"><img src="img/codecanyon.png" alt=""></div>
+                    </div>
+                </div>
+            </div>
         </main>
         <footer>
             <div class="container footer-title">
@@ -650,6 +768,37 @@
                         slidesToShow: 2,
                         arrows: false,
                         slidesToScroll: 2
+                    }
+                },
+                {
+                    breakpoint: 480,
+                    settings: {
+                        slidesToShow: 1,
+                        arrows: false,
+                        slidesToScroll: 1
+                    }
+                }
+            ]
+        });
+        $('.slide-brand').slick({
+            arrows: true,
+            infinite: true,
+            slidesToShow: 5,
+            slidesToScroll: 5,
+            responsive: [{
+                    breakpoint: 1200,
+                    settings: {
+                        slidesToShow: 5,
+                        slidesToScroll: 5,
+                        infinite: true
+                    }
+                },
+                {
+                    breakpoint: 1024,
+                    settings: {
+                        slidesToShow: 3,
+                        arrows: false,
+                        slidesToScroll: 3
                     }
                 },
                 {
