--- a/BaiTapLon-HCJ/Add-to-cart.html
+++ b/BaiTapLon-HCJ/Add-to-cart.html
@@ -103,7 +103,7 @@
                   <td class="align-middle"><a href="#" class="nav-link">x</a></td>
                 </tr>
                 <tr class="add-to-cart-table-font-row-achoo">
-                  <th class="align-middle"><button type="button" class="btn btn-outline-primary add-to-cart-table-btn-next-achoo">Continue with Shopping</button></th>
+                  <th class="align-middle"><button type="button" class="btn btn-outline-success add-to-cart-table-btn-next-achoo">Continue with Shopping</button></th>
                   <td class="align-middle text-right" colspan="5">
                     <a href="#"><img src="img-achoo/clear-cart-btn.png" alt="Clear cart"></a> 
                     <a href="#"><img src="img-achoo/update-cart-btn.png" alt="Update cart"></a></td>
