--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -156,7 +156,7 @@
                     <div class="my-account-form-space-achoo">
                     </div>
                     <!--KET THUC-->
-                      <button type="submit" class="btn btn-primary my-account-button-submit-achoo">LOGIN</button>
+                      <button type="submit" class="btn btn-success my-account-button-submit-achoo">LOGIN</button>
                   </div>
                 </div>
                 <!--KET THUC FORM NHAP LIEU-->
@@ -195,7 +195,7 @@
                                     <div class="my-account-form-space-achoo">
                                     </div>
                                     <!--KET THUC-->
-                                      <button type="submit" class="btn btn-primary my-account-button-submit-achoo">REGISTER</button>
+                                      <button type="submit" class="btn btn-success my-account-button-submit-achoo">REGISTER</button>
                                   </div>
                                 </div>
                                 <!--KET THUC FORM NHAP LIEU-->
