--- a/BaiTapLon-HCJ/Add-to-cart.html
+++ b/BaiTapLon-HCJ/Add-to-cart.html
@@ -84,7 +84,7 @@
                   </div>
                 </td>
                 <td class="align-middle">$2.50 </td>
-                <td class="align-middle"><a href="#" class="nav-link">x</a></td>
+                <td class="align-middle"><a href="#" class="nav-link text-secondary">x</a></td>
               </tr>
               <tr class="add-to-cart-table-font-row-achoo">
                 <th><img src="./img-achoo/Broccoli.jpg" alt="" class="add-to-cart-img-products-achoo"></th>
@@ -102,7 +102,7 @@
                   </div>
                 </td>
                 <td class="align-middle">$4.00</td>
-                <td class="align-middle"><a href="#" class="nav-link">x</a></td>
+                <td class="align-middle"><a href="#" class="nav-link text-secondary">x</a></td>
               </tr>
               <tr class="add-to-cart-table-font-row-achoo">
                 <th class="align-middle"><button type="button"
