--- a/BaiTapLon-HCJ/blog.html
+++ b/BaiTapLon-HCJ/blog.html
@@ -223,7 +223,7 @@
                             </div>
                         </div>
                         <div class="row">
-                            <div class="col-sm-12">
+                            <div class="col-sm-12" style="margin-bottom: 95px;">
                                 <div class="pagination justify-content-center">
                                     <a href="#">&laquo; Prev</a>
                                     <a href="#">1</a>
@@ -458,7 +458,7 @@
             </div>
         </main>
         <footer>
-            <!-- <div class="container footer-title">
+            <div class="container footer-title">
                 <div class="row">
                     <div class="col-lg-3 col-6">
                         <div class="row ">
@@ -505,7 +505,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
             <div class="container footer-content">
                 <div class="row">
                     <div class="col-xl-3 info">
