--- a/BaiTapLon-HCJ/product.html
+++ b/BaiTapLon-HCJ/product.html
@@ -625,7 +625,7 @@
     </div>
     </main>
     <footer>
-        <!-- <div class="container footer-title">
+        <div class="container footer-title">
                 <div class="row">
                     <div class="col-lg-3 col-6">
                         <div class="row ">
@@ -672,7 +672,7 @@
                         </div>
                     </div>
                 </div>
-            </div> -->
+            </div>
         <div class="container footer-content">
             <div class="row">
                 <div class="col-xl-3 info">
