--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -64,7 +64,7 @@
                                 <div class="myaccount-line-achoo border-info"></div>
                                 <a class="dropdown-item myaccount-bullet-achoo w-100" href="blog.html">BLOG</a>
                                 <div class="myaccount-line-achoo border-info"></div>
-                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="#">LOGIN</a>
+                                <a class="dropdown-item myaccount-bullet-achoo w-100" href="my-account.html">LOGIN</a>
                                 <div class="myaccount-line-achoo border-info"></div>
                             </div>
                         </div>
