--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -248,7 +248,7 @@
                 <div class="slide">
                     <img src="img/slider1.jpg" alt="">
                     <div class="slide-text">
-                        <p id="text1">Naturral Health Care Ingredientsa</p>
+                        <p id="text1">Naturral Health Care Ingredients</p>
                         <p id="center-text">100%
                             <span>ORGANIC</span></p>
                         <p id="text2">Are they safer? More nutritious? </p>
