--- a/BaiTapLon-HCJ/contact.html
+++ b/BaiTapLon-HCJ/contact.html
@@ -1,14 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta charset="UTF-8">
-    <title>Contact | Organic</title>
-    <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css">
-</head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <title>Contact | Organic</title>
+        <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="slick/slick.css">
+        <link rel="stylesheet" href="slick/slick-theme.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-achoo.css">
+    </head>
 
 <body>
     <div id="wrapper">
