--- a/BaiTapLon-HCJ/my-account.html
+++ b/BaiTapLon-HCJ/my-account.html
@@ -1,20 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Account</title>
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <script src="js/jquery-3.5.1.min.js"></script>
-
-    <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/style.css">
-    <link rel="stylesheet" href="css/style-achoo.css">
-</head>
+    <head>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta charset="UTF-8">
+        <title>My Account | Organic</title>
+        <link rel="stylesheet" href="fontawesome-free-5.14.0-web/css/all.css">
+        <link rel="stylesheet" href="css/bootstrap.min.css">
+        <link rel="stylesheet" href="slick/slick.css">
+        <link rel="stylesheet" href="slick/slick-theme.css">
+        <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/style-achoo.css">
+    </head>
 
 <body>
     <!--HEADER-->
@@ -117,12 +114,12 @@
                             <span class="nav-link navbar-font-achoo">|</span>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-light navbar-font-active-achoo" href="#">Checkout</a>
+                            <a class="nav-link text-light navbar-font-active-achoo" href="#">My Account</a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link text-light navbar-font-title-achoo" href="#">Checkout</a>
+                            <a class="nav-link text-light navbar-font-title-achoo" href="#">My Account</a>
                         </li>
                     </ul>
                 </div>
