--- a/BaiTapLon-HCJ/blog.html
+++ b/BaiTapLon-HCJ/blog.html
@@ -130,9 +130,9 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContentXL">
-                    <ul class="navbar-nav">
+                   <ul class="navbar-nav">
                           <!--MEGAMENU-->
-                        <li class="nav-item position-static parent"><img src="img/leaf.png" class="child leaf-hh213" alt=""><a href="#" data-toggle="dropdown" data-target="#">Home</a>
+                        <li class="nav-item position-static parent"><img src="img/leaf.png" class="child leaf-hh213" alt=""><a href="home.html" data-toggle="dropdown" data-target="#">Home</a>
                         <!-- div.w-100 make it mega menu, div.top-auto opens the mega menu exactly as position like other normal menu -->
                         <div class="dropdown-menu background-megamenu-hh213 w-100">
                             <div class="container">
@@ -203,14 +203,10 @@
                         </div>                        
                         </li>
                         <!--KET THUC MEGAMENU-->
-                        <li class="nav-item"><a href="">History</a></li>
-                        <li class="nav-item"><a href="">Vegetables</a></li>
-                        <li class="nav-item"><a href="">Fruits</a></li>
-                        <li class="nav-item"><a href="">Organic Fruits</a></li>
-                        <li class="nav-item"><a href="">Sprouts</a></li>
-                        <li class="nav-item"><a href="">Custom</a></li>
-                        <li class="nav-item"><a href="">Blog</a></li>
-                        <li class="nav-item"><a href="">Contact</a></li>
+                         <li class="nav-item"><a href="product.html">Products</a></li>
+                        <li class="nav-item"><a href="about.html">About Us</a></li>
+                        <li class="nav-item"><a href="blog.html">Blog</a></li>
+                        <li class="nav-item"><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </nav>
