--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -231,14 +231,10 @@
                         </div>                        
                         </li>
                         <!--KET THUC MEGAMENU-->
-                        <li class="nav-item"><a href="">History</a></li>
-                        <li class="nav-item"><a href="">Vegetables</a></li>
-                        <li class="nav-item"><a href="">Fruits</a></li>
-                        <li class="nav-item"><a href="">Organic Fruits</a></li>
-                        <li class="nav-item"><a href="">Sprouts</a></li>
-                        <li class="nav-item"><a href="">Custom</a></li>
-                        <li class="nav-item"><a href="">Blog</a></li>
-                        <li class="nav-item"><a href="">Contact</a></li>
+                        <li class="nav-item"><a href="product.html">Products</a></li>
+                        <li class="nav-item"><a href="about.html">About Us</a></li>
+                        <li class="nav-item"><a href="blog.html">Blog</a></li>
+                        <li class="nav-item"><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </nav>
