--- a/BaiTapLon-HCJ/about.html
+++ b/BaiTapLon-HCJ/about.html
@@ -131,86 +131,82 @@
                 </button>
                 <div class="collapse navbar-collapse justify-content-center" id="navbarSupportedContentXL">
                     <ul class="navbar-nav">
-                          <!--MEGAMENU-->
-                        <li class="nav-item position-static parent"><img src="img/leaf.png" class="child leaf-hh213" alt=""><a href="home.html" data-toggle="dropdown" data-target="#">Home</a>
+                        <!--MEGAMENU-->
+                        <li class="nav-item position-static parent"><img src="img/leaf.png" class="child leaf-achoo" alt=""><a href="#" data-toggle="dropdown" data-target="#">Home</a>
                         <!-- div.w-100 make it mega menu, div.top-auto opens the mega menu exactly as position like other normal menu -->
-                        <div class="dropdown-menu background-megamenu-hh213 w-100">
+                        <div class="dropdown-menu background-megamenu-achoo w-100">
                             <div class="container">
                                 <!-- div.w-100 is also needed in certain circumstances to make this menu a mega menu -->
                                 <div class="row w-100">
                                     <!-- It's yours now. Add columns or change layout as per your wish -->
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Regular Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Banana</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Chikoo</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Tender Coconut</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Pineapple</a>
+                                        <h4 class="title-megamenu-achoo">Regular Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Banana</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Chikoo</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Tender Coconut</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Pineapple</a>
                                     </div>
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Seasonal Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Mango</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Orange</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Strawberries</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Grapes</a>
+                                        <h4 class="title-megamenu-achoo">Seasonal Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Mango</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Orange</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Strawberries</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Grapes</a>
                                     </div>
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Exotics Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Avocado</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Guava Thai</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Mangosteen</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Grapefruit</a>
+                                        <h4 class="title-megamenu-achoo">Exotics Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Avocado</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Guava Thai</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Mangosteen</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Grapefruit</a>
                                     </div>
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Imported Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Kiwi Green</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Apple</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Pears</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Passion Fruit</a>
+                                        <h4 class="title-megamenu-achoo">Imported Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Kiwi Green</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Apple</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Pears</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Passion Fruit</a>
                                     </div>
                                 </div>
                                 <div class="row w-100">
                                     <!-- It's yours now. Add columns or change layout as per your wish -->
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Citrus Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Oranges</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Lemons</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Tangerines</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Lime</a>
+                                        <h4 class="title-megamenu-achoo">Citrus Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Oranges</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Lemons</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Tangerines</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Lime</a>
                                     </div>
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Dry Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Dates</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Apricots</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Figs</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Raisins</a>
+                                        <h4 class="title-megamenu-achoo">Dry Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Dates</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Apricots</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Figs</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Raisins</a>
                                     </div>
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Exotics Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Kiwi Green</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Apple</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Pears</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Passion Fruit</a>
+                                        <h4 class="title-megamenu-achoo">Exotics Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Kiwi Green</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Apple</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Pears</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Passion Fruit</a>
                                     </div>
                                     <div class="text-center col-sm-3">
-                                        <h4 class="title-megamenu-hh213">Imported Fruits</h4>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Kiwi Green</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Apple</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Pears</a>
-                                        <a href="#" class="dropdown-item desc-megamenu-hh213">Passion Fruit</a>
+                                        <h4 class="title-megamenu-achoo">Imported Fruits</h4>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Kiwi Green</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Apple</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Pears</a>
+                                        <a href="#" class="dropdown-item desc-megamenu-achoo">Passion Fruit</a>
                                     </div>
                                 </div>
                             </div>
                         </div>                        
                         </li>
                         <!--KET THUC MEGAMENU-->
-                        <li class="nav-item"><a href="">History</a></li>
-                        <li class="nav-item"><a href="">Vegetables</a></li>
-                        <li class="nav-item"><a href="">Fruits</a></li>
-                        <li class="nav-item"><a href="">Organic Fruits</a></li>
-                        <li class="nav-item"><a href="">Sprouts</a></li>
-                        <li class="nav-item"><a href="">Custom</a></li>
+                        <li class="nav-item"><a href="product.html">Products</a></li>
+                        <li class="nav-item"><a href="about.html">About Us</a></li>
                         <li class="nav-item"><a href="blog.html">Blog</a></li>
-                        <li class="nav-item"><a href="contact.html">Contact</a></li>
+                        <li class="nav-item"><a href="contact.html">Contact Us</a></li>
                     </ul>
                 </div>
             </nav>
