--- a/BaiTapLon-HCJ/home.html
+++ b/BaiTapLon-HCJ/home.html
@@ -320,7 +320,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -339,7 +339,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -361,7 +361,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -380,7 +380,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -399,7 +399,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -418,7 +418,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -437,7 +437,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -456,7 +456,7 @@
                                     <a href=""><img src="img/heart.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
-                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                 </div>
                                 <div class="wrapper-icon">
                                     <a href=""><img src="img/giohang2.png" alt=""></a>
