--- a/BaiTapLon-HCJ/product.html
+++ b/BaiTapLon-HCJ/product.html
@@ -473,7 +473,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -494,7 +494,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -515,7 +515,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -536,7 +536,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -562,7 +562,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -583,7 +583,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -604,7 +604,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -625,7 +625,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -651,7 +651,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -672,7 +672,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -693,7 +693,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
@@ -714,7 +714,7 @@
                                                     <a href=""><img src="img/heart.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
-                                                    <a href=""><img src="img/eye.png" alt=""></a>
+                                                    <a href="product-detail.html"><img src="img/eye.png" alt=""></a>
                                                 </div>
                                                 <div class="wrapper-icon">
                                                     <a href=""><img src="img/giohang2.png" alt=""></a>
